--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </div>
             </div>
     </section>
-    <section class="container agencias">
+    <section class="agencias">
         <h3>Conoce todas nuestras agencias</h3>
         <div>
             <h4>Cali</h4>
