--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
     </div>
     <section class="container">
             <div class="card" style="width: 18rem;">
-                    <img src="/Images/RECETAS.jpg" class="card-img-top" alt="...">
+                    <img src="Images/RECETAS.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Recetas</h5>
                       <a href="#" class="btn btn-primary">Leer más</a>
                     </div>
             </div>
             <div class="card" style="width: 18rem;">
-                    <img src="/Images/TIPS_SALUDABLES.jpg" class="card-img-top" alt="...">
+                    <img src="Images/TIPS_SALUDABLES.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Tips de salud</h5>
                       <a href="#" class="btn btn-primary">Leer más</a>
