--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Fruticola de Colombia</title>
     <!-- logo -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/Images/LOGO_HEADER.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/LOGO_HEADER.png">
 </head>
 <body>
         <!-- Menu -->
@@ -73,10 +73,10 @@
                 </a>
         </div>
     <section class="container titulo1">
-        <img src="/Images/MANZANA_VERDE.jpg" alt="MANZANA_VERDE" width="200" height="200" class="manzana_verde">
+        <img src="Images/MANZANA_VERDE.jpg" alt="MANZANA_VERDE" width="200" height="200" class="manzana_verde">
         <h2>Nuestro propósito como compañía <br>es brindar bienestar y servicio de la <br> 
           mano de los mejores</h2>
-        <img src="/Images/manzana_2.jpg" alt="" width="200" height="200" class="manzana_roja">
+        <img src="Images/manzana_2.jpg" alt="" width="200" height="200" class="manzana_roja">
         
     </section>
     <section>
@@ -98,9 +98,9 @@
     </section>
     <section class="container_historia" id="historia">
 
-        <div class="frutas_izq"><img src="/Images/PERA.jpg" alt="pera" height="200">
-          <img src="/Images/KIWI.jpg" alt="kiwi" height="200">
-          <img src="/Images/gala_3.jpg" alt="gala_3" height="200"></div>
+        <div class="frutas_izq"><img src="Images/PERA.jpg" alt="pera" height="200">
+          <img src="Images/KIWI.jpg" alt="kiwi" height="200">
+          <img src="Images/gala_3.jpg" alt="gala_3" height="200"></div>
         <div class="bloque_text_historia">
           <div class="bloque1">
             <h2>Los mejores desde 1978</h2>
@@ -130,7 +130,7 @@
           </div>
         </div>
         <div class="frutas_der">
-          <img src="/Images/frutas.jpg" alt="frutas" class="frutas" height="800">
+          <img src="Images/frutas.jpg" alt="frutas" class="frutas" height="800">
         </div>
     </section>
     <!-- Slider Productos -->
