--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
             aria-controls="multiCollapseExample1">
             <h5>Aprendizaje</h5>
             <div class="img-container">
-              <img src="Images/aprendizaje.jpg" class="card-img-top" alt="...">
+              <!-- <img src="Images/aprendizaje.jpg" class="card-img-top" alt="..."> -->
+              <object data="Images/aprendizaje.svg" type="image/svg+xml" class="svg_services"></object>
             </div>
           </a>
           <div class="collapse multi-collapse" id="multiCollapseExample1">
@@ -158,7 +159,8 @@
             aria-controls="multiCollapseExample1">
             <h5>Compromiso</h5>
             <div class="img-container">
-              <img src="Images/compromiso.jpg" class="card-img-top" alt="">
+              <!-- <img src="Images/compromiso.svg" class="card-img-top" alt=""> -->
+              <object data="Images/compromiso.svg" type="image/svg+xml" class="svg_services"></object>
             </div>
           </a>
           <div class="collapse multi-collapse" id="multiCollapseExample2">
@@ -176,7 +178,8 @@
             aria-controls="multiCollapseExample1">
             <h5>Servicio</h5>
             <div class="img-container">
-              <img src="Images/servicio.jpg" class="card-img-top" alt="...">
+              <!-- <img src="Images/servicio.jpg" class="card-img-top" alt="..."> -->
+              <object data="Images/servicio.svg" type="image/svg+xml" class="svg_services"></object>
             </div>
           </a>
           <div class="collapse multi-collapse" id="multiCollapseExample3">
