--- a/index.html
+++ b/index.html
@@ -56,17 +56,20 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="Images/Slider/SLIDER_1.png" class="d-block w-100 slider" alt="...">
+                    <!-- <img src="Images/Slider/SLIDER_1.png" class="d-block w-100 slider" alt="..."> -->
+                    <object data="Images/Slider/SLIDER__1.svg" type="image/svg+xml" class="main_slider"></object>
                   </div>
                   <div class="carousel-item">
-                    <img src="Images/Slider/SLIDER_2.png" class="d-block w-100 slider" alt="...">
+                    <!-- <img src="Images/Slider/SLIDER_2.png" class="d-block w-100 slider" alt="..."> -->
+                    <object data="Images/Slider/SLIDER__2.svg" type="image/svg+xml" class="main_slider"></object>
                   </div>
                   <div class="carousel-item">
-                    <img src="Images/Slider/SLIDER_3.png" class="d-block w-100 slider" alt="...">
+                    <!-- <img src="Images/Slider/SLIDER__3.png" class="d-block w-100 slider" alt="..."> -->
+                    <object data="Images/Slider/SLIDER__3.svg" type="image/svg+xml" class="main_slider"></object>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="carousel-control-prev-icon" aria-hidden="true" class="main_slider"></span>
                   <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
