--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true" class="main_slider"></span>
+                  <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
                   <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
@@ -277,26 +277,27 @@
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="Images/Productos/BANDEJA_MANZANAS.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="Images/Productos/BANDEJA_MIX.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="Images/Productos/BANDEJA_MIX_2.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="Images/Productos/BANDEJA_M_GALA.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="Images/Productos/BANDEJA_M_VERDE.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="Images/Productos/BANDEJA_PERA.jpg" class="d-block w-100" alt="...">
-                      </div>
+                    <div class="contenedor_productos"><div class="carousel-item active">
+                    <img src="Images/Productos/BANDEJA_MANZANAS.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_MIX.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_MIX_2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_M_GALA.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_M_VERDE.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_PERA.jpg" class="d-block w-100" alt="...">
+                    </div></div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
