--- a/index.html
+++ b/index.html
@@ -235,44 +235,10 @@
           <img src="Images/frutas.jpg" alt="frutas" class="frutas" height="800">
         </div>
     </section>
-    <!-- Slider Productos -->
-    <!-- <h3 id="productos">Nuestros Productos</h3>
-    <div class="productos">
-      <div id="carouselExampleControls" class="carousel  slide_productos slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="Images/Productos/BANDEJA_MANZANAS.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="Images/Productos/BANDEJA_MIX.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="Images/Productos/BANDEJA_MIX_2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="Images/Productos/BANDEJA_M_GALA.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="Images/Productos/BANDEJA_M_VERDE.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="Images/Productos/BANDEJA_PERA.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="false"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div> -->
-    <section class="seccion_productos">
+     <section class="seccion_productos">
         <h3 id="productos">Nuestros Productos</h3>
         <div class="productos">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -306,6 +272,39 @@
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
+                </a>
+              </div> -->
+              <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="contenedor_productos">
+                    <div class="carousel-item active">
+                    <img src="Images/Productos/BANDEJA_MANZANAS.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_MIX.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_MIX_2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_M_GALA.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_M_VERDE.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="Images/Productos/BANDEJA_PERA.jpg" class="d-block w-100" alt="...">
+                    </div></div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                    <i class="fas fa-chevron-circle-left"></i>
+                  <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span> -->
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                    <i class="fas fa-chevron-circle-right"></i>
+                 <!--  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span> -->
                 </a>
               </div>
         </div>
