--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                 </nav>
 
         <!-- Slider -->
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <!-- <img src="Images/Slider/SLIDER_1.png" class="d-block w-100 slider" alt="..."> -->
-                    <object data="Images/Slider/SLIDER__1.svg" type="image/svg+xml" class="main_slider"></object>
+                    <img src="Images/Slider/SLIDER_1.png" class="d-block w-100 slider" alt="...">
+                    <object data="Images/Slider/SLIDER__1.svg" type="image/svg+xml" class="main_slider d-block w-100"></object>
                   </div>
                   <div class="carousel-item">
-                    <!-- <img src="Images/Slider/SLIDER_2.png" class="d-block w-100 slider" alt="..."> -->
-                    <object data="Images/Slider/SLIDER__2.svg" type="image/svg+xml" class="main_slider"></object>
+                    <img src="Images/Slider/SLIDER_2.png" class="d-block w-100 slider" alt="...">
+                    <object data="Images/Slider/SLIDER__2.svg" type="image/svg+xml" class="main_slider d-block w-100"></object>
                   </div>
                   <div class="carousel-item">
-                    <!-- <img src="Images/Slider/SLIDER__3.png" class="d-block w-100 slider" alt="..."> -->
-                    <object data="Images/Slider/SLIDER__3.svg" type="image/svg+xml" class="main_slider"></object>
+                    <img src="Images/Slider/SLIDER__3.png" class="d-block w-100 slider" alt="...">
+                    <object data="Images/Slider/SLIDER__3.svg" type="image/svg+xml" class="main_slider d-block w-100"></object>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -76,6 +76,31 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
+        </div> -->
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="contenedor_slider">
+              <div class="carousel-item active">
+                <img src="Images/Slider/SLIDER__1.png" class="d-block w-100 slider" alt="...">
+              </div>
+              <div class="carousel-item">
+                  <img src="Images/Slider/SLIDER__2.png" class="d-block w-100 slider" alt="...">
+               </div>
+              <div class="carousel-item">
+                  <img src="Images/Slider/SLIDER__3.png" class="d-block w-100 slider" alt="...">
+              </div>
+            
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+              <i class="fas fa-chevron-circle-left"></i>
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span> -->
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+              <i class="fas fa-chevron-circle-right"></i>
+           <!--  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span> -->
+          </a>
         </div>
     <section class="container titulo1">
         <img src="Images/MANZANA_VERDE.jpg" alt="MANZANA_VERDE" width="200" height="200" class="manzana_verde">
