Cambio de presentación de frutas en bandejas a frutas individuales

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           <div class="carousel-inner">
             <div class="contenedor_productos">
               <div class="carousel-item active">
-                <img src="Images/PRODJPG/BADEJA_6VERDE.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/arandano1.png" class="d-block w-100" alt="...">
               </div>
               <!-- <div class="carousel-item">
                 <img src="Images/Productos/BANDEJA_MIX.jpg" class="d-block w-100" alt="...">
@@ -322,69 +322,66 @@
                 <img src="Images/FOTOSRP/BOLSA_GALAX5.jpg" class="d-block w-100" alt="...">
               </div> -->
               <div class="carousel-item">
-                <img src="Images/PRODJPG/ANCHETA_CORAZON.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/arandano2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/ANCHETA_REDONDA.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/arandano3.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_3CIRUELA.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/arandanos.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_3GALA.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/ciruela.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_3KIWI.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/ciruela_completa.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_3ROJAS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/ciruela_mitad.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_3VERDE.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/durazno.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_4CIRUELAS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/durazno_mitad.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_4GALAS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/kiwi.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_4KIWIS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/kiwi_completa.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_4PERAS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/kiwi_mitad.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_4PERASI.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/manzana.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_4ROJAS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/manzana_completa.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_5GALA.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/pera.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_5PERA.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/pera_completa.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_5ROJAS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/pera_partida.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_5VERDES.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/uva_morada_horizontal.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_6GALA.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/uva_morada_vertical.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_6KIWI.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/uva_verde_horizontal.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_6PERAS.jpg" class="d-block w-100" alt="...">
+                <img src="Images/Pres_Indivdual/uva_verde_vertical.png" class="d-block w-100" alt="...">
               </div>
-              <div class="carousel-item">
-                <img src="Images/PRODJPG/BANDEJA_6ROJA.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
+              <!-- <div class="carousel-item"> vieja sección de frutas
                 <img src="Images/PRODJPG/BANDEJA_6VERDEROJA.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
@@ -423,7 +420,7 @@
               <div class="carousel-item">
                 <img src="Images/PRODJPG/BURBUJA_PERA.jpg" class="d-block w-100" alt="...">
               </div>
-             
+              -->
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
