arreglo de transiciones de las frutas

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           <div class="carousel-inner">
             <div class="contenedor_productos">
               <div class="carousel-item active">
-                <img src="Images/fotos400x400/arandanos.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/arandanos.jpg" class="d-block w-100" alt="...">
               </div>
               <!-- <div class="carousel-item">
                 <img src="Images/Productos/BANDEJA_MIX.jpg" class="d-block w-100" alt="...">
@@ -322,28 +322,28 @@
                 <img src="Images/FOTOSRP/BOLSA_GALAX5.jpg" class="d-block w-100" alt="...">
               </div> -->
               <div class="carousel-item">
-                <img src="Images/fotos400x400/ciruela.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/ciruela.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/fotos400x400/durazno.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/durazno.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/fotos400x400/kiwi.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/kiwi.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/fotos400x400/manzana verde.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/manzana verde.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/fotos400x400/manzana.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/manzana.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/fotos400x400/pera.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/pera.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/fotos400x400/uva roja.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/uva roja.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Images/fotos400x400/uva verde.png" class="d-block w-100" alt="...">
+                <img src="Images/fotos400x400/uva verde.jpg" class="d-block w-100" alt="...">
               </div>
             <!--   <div class="carousel-item">
                 <img src="Images/Pres_Indivdual/kiwi.png" class="d-block w-100" alt="...">
